services/expServer/utils/xEvalParser/base/XEvalBaseParser.js
// Generated from XEvalBase.g4 by ANTLR 4.7.2
// jshint ignore: start
var antlr4 = require('antlr4/index');
var XEvalBaseVisitor = require('./XEvalBaseVisitor').XEvalBaseVisitor;

var grammarFileName = "XEvalBase.g4";




var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, null, null, "':'", "'::'", "'.'", "','", "'('", 
                     "')'", "'['", "']'", "'{'", "'}'", "'\\'", "'<'", "'>'", 
                     "'^'", null, null, null, null, "'''", "'\"'" ];

var symbolicNames = [ null, "TRUE", "FALSE", "COLON", "DOUBLECOLON", "DOT", 
                      "COMMA", "LPARENS", "RPARENS", "LBRACKET", "RBRACKET", 
                      "LCURLYBRACE", "RCURLYBRACE", "BACKSLASH", "LTSIGN", 
                      "GTSIGN", "CARET", "DECIMAL", "SCIENTIFICDECIMAL", 
                      "INTEGER", "STRING", "APOSTROPHE", "SINGLEQUOTE", 
                      "ALPHANUMERIC", "WS", "UNRECOGNIZED" ];

var ruleNames =  [ "query", "expr", "fnArgs", "arg", "fn", "moduleName", 
                   "fnName", "columnArg", "prefix", "colElement", "colName", 
                   "propertyName", "aggValue", "integerLiteral", "decimalLiteral", 
                   "stringLiteral", "booleanLiteral" ];

function XEvalBaseParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

XEvalBaseParser.prototype = Object.create(antlr4.Parser.prototype);
XEvalBaseParser.prototype.constructor = XEvalBaseParser;

Object.defineProperty(XEvalBaseParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

XEvalBaseParser.EOF = antlr4.Token.EOF;
XEvalBaseParser.TRUE = 1;
XEvalBaseParser.FALSE = 2;
XEvalBaseParser.COLON = 3;
XEvalBaseParser.DOUBLECOLON = 4;
XEvalBaseParser.DOT = 5;
XEvalBaseParser.COMMA = 6;
XEvalBaseParser.LPARENS = 7;
XEvalBaseParser.RPARENS = 8;
XEvalBaseParser.LBRACKET = 9;
XEvalBaseParser.RBRACKET = 10;
XEvalBaseParser.LCURLYBRACE = 11;
XEvalBaseParser.RCURLYBRACE = 12;
XEvalBaseParser.BACKSLASH = 13;
XEvalBaseParser.LTSIGN = 14;
XEvalBaseParser.GTSIGN = 15;
XEvalBaseParser.CARET = 16;
XEvalBaseParser.DECIMAL = 17;
XEvalBaseParser.SCIENTIFICDECIMAL = 18;
XEvalBaseParser.INTEGER = 19;
XEvalBaseParser.STRING = 20;
XEvalBaseParser.APOSTROPHE = 21;
XEvalBaseParser.SINGLEQUOTE = 22;
XEvalBaseParser.ALPHANUMERIC = 23;
XEvalBaseParser.WS = 24;
XEvalBaseParser.UNRECOGNIZED = 25;

XEvalBaseParser.RULE_query = 0;
XEvalBaseParser.RULE_expr = 1;
XEvalBaseParser.RULE_fnArgs = 2;
XEvalBaseParser.RULE_arg = 3;
XEvalBaseParser.RULE_fn = 4;
XEvalBaseParser.RULE_moduleName = 5;
XEvalBaseParser.RULE_fnName = 6;
XEvalBaseParser.RULE_columnArg = 7;
XEvalBaseParser.RULE_prefix = 8;
XEvalBaseParser.RULE_colElement = 9;
XEvalBaseParser.RULE_colName = 10;
XEvalBaseParser.RULE_propertyName = 11;
XEvalBaseParser.RULE_aggValue = 12;
XEvalBaseParser.RULE_integerLiteral = 13;
XEvalBaseParser.RULE_decimalLiteral = 14;
XEvalBaseParser.RULE_stringLiteral = 15;
XEvalBaseParser.RULE_booleanLiteral = 16;


function QueryContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = XEvalBaseParser.RULE_query;
    return this;
}

QueryContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
QueryContext.prototype.constructor = QueryContext;

QueryContext.prototype.expr = function() {
    return this.getTypedRuleContext(ExprContext,0);
};

QueryContext.prototype.EOF = function() {
    return this.getToken(XEvalBaseParser.EOF, 0);
};

QueryContext.prototype.accept = function(visitor) {
    if ( visitor instanceof XEvalBaseVisitor ) {
        return visitor.visitQuery(this);
    } else {
        return visitor.visitChildren(this);
    }
};




XEvalBaseParser.QueryContext = QueryContext;

XEvalBaseParser.prototype.query = function() {

    var localctx = new QueryContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, XEvalBaseParser.RULE_query);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 34;
        this.expr();
        this.state = 35;
        this.match(XEvalBaseParser.EOF);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function ExprContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = XEvalBaseParser.RULE_expr;
    return this;
}

ExprContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ExprContext.prototype.constructor = ExprContext;

ExprContext.prototype.fn = function() {
    return this.getTypedRuleContext(FnContext,0);
};

ExprContext.prototype.LPARENS = function() {
    return this.getToken(XEvalBaseParser.LPARENS, 0);
};

ExprContext.prototype.fnArgs = function() {
    return this.getTypedRuleContext(FnArgsContext,0);
};

ExprContext.prototype.RPARENS = function() {
    return this.getToken(XEvalBaseParser.RPARENS, 0);
};

ExprContext.prototype.accept = function(visitor) {
    if ( visitor instanceof XEvalBaseVisitor ) {
        return visitor.visitExpr(this);
    } else {
        return visitor.visitChildren(this);
    }
};




XEvalBaseParser.ExprContext = ExprContext;

XEvalBaseParser.prototype.expr = function() {

    var localctx = new ExprContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, XEvalBaseParser.RULE_expr);
    try {
        this.state = 46;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,0,this._ctx);
        switch(la_) {
        case 1:
            this.enterOuterAlt(localctx, 1);
            this.state = 37;
            this.fn();
            this.state = 38;
            this.match(XEvalBaseParser.LPARENS);
            this.state = 39;
            this.fnArgs();
            this.state = 40;
            this.match(XEvalBaseParser.RPARENS);
            break;

        case 2:
            this.enterOuterAlt(localctx, 2);
            this.state = 42;
            this.fn();
            this.state = 43;
            this.match(XEvalBaseParser.LPARENS);
            this.state = 44;
            this.match(XEvalBaseParser.RPARENS);
            break;

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function FnArgsContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = XEvalBaseParser.RULE_fnArgs;
    return this;
}

FnArgsContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
FnArgsContext.prototype.constructor = FnArgsContext;

FnArgsContext.prototype.arg = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ArgContext);
    } else {
        return this.getTypedRuleContext(ArgContext,i);
    }
};

FnArgsContext.prototype.COMMA = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(XEvalBaseParser.COMMA);
    } else {
        return this.getToken(XEvalBaseParser.COMMA, i);
    }
};


FnArgsContext.prototype.accept = function(visitor) {
    if ( visitor instanceof XEvalBaseVisitor ) {
        return visitor.visitFnArgs(this);
    } else {
        return visitor.visitChildren(this);
    }
};




XEvalBaseParser.FnArgsContext = FnArgsContext;

XEvalBaseParser.prototype.fnArgs = function() {

    var localctx = new FnArgsContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, XEvalBaseParser.RULE_fnArgs);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 48;
        this.arg();
        this.state = 53;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===XEvalBaseParser.COMMA) {
            this.state = 49;
            this.match(XEvalBaseParser.COMMA);
            this.state = 50;
            this.arg();
            this.state = 55;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function ArgContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = XEvalBaseParser.RULE_arg;
    return this;
}

ArgContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ArgContext.prototype.constructor = ArgContext;

ArgContext.prototype.expr = function() {
    return this.getTypedRuleContext(ExprContext,0);
};

ArgContext.prototype.integerLiteral = function() {
    return this.getTypedRuleContext(IntegerLiteralContext,0);
};

ArgContext.prototype.decimalLiteral = function() {
    return this.getTypedRuleContext(DecimalLiteralContext,0);
};

ArgContext.prototype.booleanLiteral = function() {
    return this.getTypedRuleContext(BooleanLiteralContext,0);
};

ArgContext.prototype.stringLiteral = function() {
    return this.getTypedRuleContext(StringLiteralContext,0);
};

ArgContext.prototype.columnArg = function() {
    return this.getTypedRuleContext(ColumnArgContext,0);
};

ArgContext.prototype.aggValue = function() {
    return this.getTypedRuleContext(AggValueContext,0);
};

ArgContext.prototype.accept = function(visitor) {
    if ( visitor instanceof XEvalBaseVisitor ) {
        return visitor.visitArg(this);
    } else {
        return visitor.visitChildren(this);
    }
};




XEvalBaseParser.ArgContext = ArgContext;

XEvalBaseParser.prototype.arg = function() {

    var localctx = new ArgContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, XEvalBaseParser.RULE_arg);
    try {
        this.state = 63;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,2,this._ctx);
        switch(la_) {
        case 1:
            this.enterOuterAlt(localctx, 1);
            this.state = 56;
            this.expr();
            break;

        case 2:
            this.enterOuterAlt(localctx, 2);
            this.state = 57;
            this.integerLiteral();
            break;

        case 3:
            this.enterOuterAlt(localctx, 3);
            this.state = 58;
            this.decimalLiteral();
            break;

        case 4:
            this.enterOuterAlt(localctx, 4);
            this.state = 59;
            this.booleanLiteral();
            break;

        case 5:
            this.enterOuterAlt(localctx, 5);
            this.state = 60;
            this.stringLiteral();
            break;

        case 6:
            this.enterOuterAlt(localctx, 6);
            this.state = 61;
            this.columnArg();
            break;

        case 7:
            this.enterOuterAlt(localctx, 7);
            this.state = 62;
            this.aggValue();
            break;

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function FnContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = XEvalBaseParser.RULE_fn;
    return this;
}

FnContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
FnContext.prototype.constructor = FnContext;

FnContext.prototype.moduleName = function() {
    return this.getTypedRuleContext(ModuleNameContext,0);
};

FnContext.prototype.COLON = function() {
    return this.getToken(XEvalBaseParser.COLON, 0);
};

FnContext.prototype.fnName = function() {
    return this.getTypedRuleContext(FnNameContext,0);
};

FnContext.prototype.accept = function(visitor) {
    if ( visitor instanceof XEvalBaseVisitor ) {
        return visitor.visitFn(this);
    } else {
        return visitor.visitChildren(this);
    }
};




XEvalBaseParser.FnContext = FnContext;

XEvalBaseParser.prototype.fn = function() {

    var localctx = new FnContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, XEvalBaseParser.RULE_fn);
    try {
        this.state = 70;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,3,this._ctx);
        switch(la_) {
        case 1:
            this.enterOuterAlt(localctx, 1);
            this.state = 65;
            this.moduleName();
            this.state = 66;
            this.match(XEvalBaseParser.COLON);
            this.state = 67;
            this.fnName();
            break;

        case 2:
            this.enterOuterAlt(localctx, 2);
            this.state = 69;
            this.fnName();
            break;

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function ModuleNameContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = XEvalBaseParser.RULE_moduleName;
    this._ALPHANUMERIC = null; // Token
    return this;
}

ModuleNameContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ModuleNameContext.prototype.constructor = ModuleNameContext;

ModuleNameContext.prototype.ALPHANUMERIC = function() {
    return this.getToken(XEvalBaseParser.ALPHANUMERIC, 0);
};

ModuleNameContext.prototype.accept = function(visitor) {
    if ( visitor instanceof XEvalBaseVisitor ) {
        return visitor.visitModuleName(this);
    } else {
        return visitor.visitChildren(this);
    }
};




XEvalBaseParser.ModuleNameContext = ModuleNameContext;

XEvalBaseParser.prototype.moduleName = function() {

    var localctx = new ModuleNameContext(this, this._ctx, this.state);
    this.enterRule(localctx, 10, XEvalBaseParser.RULE_moduleName);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 72;
        localctx._ALPHANUMERIC = this.match(XEvalBaseParser.ALPHANUMERIC);
        if (xcHelper.checkParserNamePattern(ParserPatternCategory.UDFModule, (localctx._ALPHANUMERIC===null ? null : localctx._ALPHANUMERIC.text))) {
            throw SyntaxError('Invalid module name: ' + (localctx._ALPHANUMERIC===null ? null : localctx._ALPHANUMERIC.text));}
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function FnNameContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = XEvalBaseParser.RULE_fnName;
    this._ALPHANUMERIC = null; // Token
    return this;
}

FnNameContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
FnNameContext.prototype.constructor = FnNameContext;

FnNameContext.prototype.ALPHANUMERIC = function() {
    return this.getToken(XEvalBaseParser.ALPHANUMERIC, 0);
};

FnNameContext.prototype.accept = function(visitor) {
    if ( visitor instanceof XEvalBaseVisitor ) {
        return visitor.visitFnName(this);
    } else {
        return visitor.visitChildren(this);
    }
};




XEvalBaseParser.FnNameContext = FnNameContext;

XEvalBaseParser.prototype.fnName = function() {

    var localctx = new FnNameContext(this, this._ctx, this.state);
    this.enterRule(localctx, 12, XEvalBaseParser.RULE_fnName);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 75;
        localctx._ALPHANUMERIC = this.match(XEvalBaseParser.ALPHANUMERIC);
        if (xcHelper.checkParserNamePattern(ParserPatternCategory.UDFFn, (localctx._ALPHANUMERIC===null ? null : localctx._ALPHANUMERIC.text))) {
            throw SyntaxError('Invalid udf name: ' + (localctx._ALPHANUMERIC===null ? null : localctx._ALPHANUMERIC.text));}
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function ColumnArgContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = XEvalBaseParser.RULE_columnArg;
    return this;
}

ColumnArgContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ColumnArgContext.prototype.constructor = ColumnArgContext;

ColumnArgContext.prototype.colElement = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ColElementContext);
    } else {
        return this.getTypedRuleContext(ColElementContext,i);
    }
};

ColumnArgContext.prototype.DOUBLECOLON = function() {
    return this.getToken(XEvalBaseParser.DOUBLECOLON, 0);
};

ColumnArgContext.prototype.accept = function(visitor) {
    if ( visitor instanceof XEvalBaseVisitor ) {
        return visitor.visitColumnArg(this);
    } else {
        return visitor.visitChildren(this);
    }
};




XEvalBaseParser.ColumnArgContext = ColumnArgContext;

XEvalBaseParser.prototype.columnArg = function() {

    var localctx = new ColumnArgContext(this, this._ctx, this.state);
    this.enterRule(localctx, 14, XEvalBaseParser.RULE_columnArg);
    try {
        this.state = 83;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,4,this._ctx);
        switch(la_) {
        case 1:
            this.enterOuterAlt(localctx, 1);
            this.state = 78;
            this.colElement();
            this.state = 79;
            this.match(XEvalBaseParser.DOUBLECOLON);
            this.state = 80;
            this.colElement();
            break;

        case 2:
            this.enterOuterAlt(localctx, 2);
            this.state = 82;
            this.colElement();
            break;

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function PrefixContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = XEvalBaseParser.RULE_prefix;
    this._ALPHANUMERIC = null; // Token
    return this;
}

PrefixContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
PrefixContext.prototype.constructor = PrefixContext;

PrefixContext.prototype.ALPHANUMERIC = function() {
    return this.getToken(XEvalBaseParser.ALPHANUMERIC, 0);
};

PrefixContext.prototype.accept = function(visitor) {
    if ( visitor instanceof XEvalBaseVisitor ) {
        return visitor.visitPrefix(this);
    } else {
        return visitor.visitChildren(this);
    }
};




XEvalBaseParser.PrefixContext = PrefixContext;

XEvalBaseParser.prototype.prefix = function() {

    var localctx = new PrefixContext(this, this._ctx, this.state);
    this.enterRule(localctx, 16, XEvalBaseParser.RULE_prefix);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 85;
        localctx._ALPHANUMERIC = this.match(XEvalBaseParser.ALPHANUMERIC);
        if (xcHelper.checkParserNamePattern(ParserPatternCategory.TablePrefix, (localctx._ALPHANUMERIC===null ? null : localctx._ALPHANUMERIC.text))) {
            throw SyntaxError(xcHelper.checkParserNamePattern(ParserPatternCategory.TablePrefix, (localctx._ALPHANUMERIC===null ? null : localctx._ALPHANUMERIC.text)));
            }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function ColElementContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = XEvalBaseParser.RULE_colElement;
    return this;
}

ColElementContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ColElementContext.prototype.constructor = ColElementContext;

ColElementContext.prototype.colName = function() {
    return this.getTypedRuleContext(ColNameContext,0);
};

ColElementContext.prototype.DOT = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(XEvalBaseParser.DOT);
    } else {
        return this.getToken(XEvalBaseParser.DOT, i);
    }
};


ColElementContext.prototype.propertyName = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(PropertyNameContext);
    } else {
        return this.getTypedRuleContext(PropertyNameContext,i);
    }
};

ColElementContext.prototype.LBRACKET = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(XEvalBaseParser.LBRACKET);
    } else {
        return this.getToken(XEvalBaseParser.LBRACKET, i);
    }
};


ColElementContext.prototype.integerLiteral = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(IntegerLiteralContext);
    } else {
        return this.getTypedRuleContext(IntegerLiteralContext,i);
    }
};

ColElementContext.prototype.RBRACKET = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(XEvalBaseParser.RBRACKET);
    } else {
        return this.getToken(XEvalBaseParser.RBRACKET, i);
    }
};


ColElementContext.prototype.accept = function(visitor) {
    if ( visitor instanceof XEvalBaseVisitor ) {
        return visitor.visitColElement(this);
    } else {
        return visitor.visitChildren(this);
    }
};




XEvalBaseParser.ColElementContext = ColElementContext;

XEvalBaseParser.prototype.colElement = function() {

    var localctx = new ColElementContext(this, this._ctx, this.state);
    this.enterRule(localctx, 18, XEvalBaseParser.RULE_colElement);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 88;
        this.colName();
        this.state = 93;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===XEvalBaseParser.DOT) {
            this.state = 89;
            this.match(XEvalBaseParser.DOT);
            this.state = 90;
            this.propertyName();
            this.state = 95;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 102;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===XEvalBaseParser.LBRACKET) {
            this.state = 96;
            this.match(XEvalBaseParser.LBRACKET);
            this.state = 97;
            this.integerLiteral();
            this.state = 98;
            this.match(XEvalBaseParser.RBRACKET);
            this.state = 104;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function ColNameContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = XEvalBaseParser.RULE_colName;
    this._ALPHANUMERIC = null; // Token
    return this;
}

ColNameContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ColNameContext.prototype.constructor = ColNameContext;

ColNameContext.prototype.ALPHANUMERIC = function() {
    return this.getToken(XEvalBaseParser.ALPHANUMERIC, 0);
};

ColNameContext.prototype.accept = function(visitor) {
    if ( visitor instanceof XEvalBaseVisitor ) {
        return visitor.visitColName(this);
    } else {
        return visitor.visitChildren(this);
    }
};




XEvalBaseParser.ColNameContext = ColNameContext;

XEvalBaseParser.prototype.colName = function() {
